Controller e swagger de categorias
