# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\CategoriaController;
 use App\Http\Controllers\ProdutoController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -19,9 +20,14 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
-
 Route::get('produtos', [ProdutoController::class, 'index']);
 Route::get('produtos/{id}', [ProdutoController::class, 'show']);
 Route::post('produtos', [ProdutoController::class, 'store']);
 Route::put('produtos/{id}', [ProdutoController::class, 'update']);
 Route::delete('produtos/{id}', [ProdutoController::class, 'delete']);
+
+Route::get('categorias', [CategoriaController::class, 'index']);
+Route::get('categorias/{id}', [CategoriaController::class, 'show']);
+Route::post('categorias', [CategoriaController::class, 'store']);
+Route::put('categorias/{id}', [CategoriaController::class, 'update']);
+Route::delete('categorias/{id}', [CategoriaController::class, 'delete']);
